# osm-postgis

./: docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile
notebooks/: osm_postgis_queries.ipynb  setup_osm_postgis.ipynb
sql/: 02_osm_road_network.sql  03_osm_waterway_analysis.sql  04_osm_water_body_analysis.sql  05_osm_multi_table_analysis.sql
sql/arizona/: 01_osm_restaurant_distribution.sql  02_osm_park_area_by_county.sql  03_osm_restaurants_near_streets.sql  04_osm_railway_density_by_county.sql  05_osm_multi_table_analysis.sql
sql/hawaii/: 01_osm_island_areas.sql  02_osm_road_network.sql  03_osm_waterway_analysis.sql  04_osm_water_body_analysis.sql  05_osm_multi_table_analysis.sql
src/: setup_osm_postgis.py
