[project]
name = "python-gis-postgis-development"
version = "0.1.0"
description = "Python GIS and PostGIS development environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.1,<4",
    "numpy>=2.4.3,<3",
    "geopandas>=1.1.3,<2",
    "shapely>=2.1.2,<3",
    "pyproj>=3.7.2,<4",
    "jupyter>=1.1.1,<2",
    "ipykernel>=7.2.0,<8",
    "matplotlib>=3.10.8,<4",
    "requests>=2,<3",
    "psycopg2-binary>=2.9,<3",
    "sqlalchemy>=2.0.49,<3",
]

[tool.uv]
